missed scope test for spring-test dependency

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.framework.version}</version>
+            <scope>test</scope>            
         </dependency>
         <dependency>
             <groupId>junit</groupId>
