--- a/pom.xml
+++ b/pom.xml
@@ -91,12 +91,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.8.1</version>
                 <configuration>
-                    <systemProperties>
-                        <property>
-                            <name>log4j.configuration</name>
-                            <value>${log4j.configuration}</value>
-                        </property>
-                    </systemProperties>
+                    <systemPropertyVariables>
+                        <log4j.configuration>${log4j.configuration}</log4j.configuration>
+                    </systemPropertyVariables>
                     <forkMode>${maven.surefire.forkmode}</forkMode>
                     <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
                 </configuration>
