--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,8 @@
         <log4j.configuration>log4j/log4j.properties</log4j.configuration>
         <!-- often used dependency version data -->
         <spring.batch.version>2.1.8.RELEASE</spring.batch.version>
-        <spring.framework.version>3.0.5.RELEASE</spring.framework.version>
+        <spring.framework.version>3.0.6.RELEASE</spring.framework.version>
+        <slf4j.version>1.6.2</slf4j.version>
     </properties>
     
     <build>
@@ -89,7 +90,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.9</version>
                 <configuration>
                     <systemPropertyVariables>
                         <log4j.configuration>${log4j.configuration}</log4j.configuration>
@@ -126,12 +127,12 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.6.1</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.1</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -186,7 +187,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
+            <version>4.9</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
